--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,12 +1,8 @@
 name: "Push to synthxacxe"
-on:
-  pull_request:
-  push:
+on: [pull_request, push]
 jobs:
-  tests:
-    runs-on: 
-    strategy:
-      matrix: macos-latest
+  build:
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v17
