--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,5 +12,5 @@ jobs:
       with:
         name: synthxacxe
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix-build
+    - run: nix-build shell.nix
     - run: nix-shell --run "echo OK"
