--- a/.github/workflows/build_and_push_cache.yml
+++ b/.github/workflows/build_and_push_cache.yml
@@ -1,11 +1,8 @@
-name: "Build cache"
+name: "Build and push cache"
 on: [pull_request, push]
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [macos-latest, macos-10.15]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v18
@@ -15,5 +12,5 @@ jobs:
       with:
         name: synthxacxe
         authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-    - run: nix-build ./nix/all-tools.nix
-    - run: nix-shell --run "echo OK"
+    - run: nix-build ./shell.nix --arg crossSystem '{ config = "x86_64-apple-darwin"; }'
+    - run: nix-shell --show-trace --run "echo OK"
